Fixed pep8 issues and made pep8 less tyranic
Signed-off-by: Bernard `Guyzmo` Pratz <guyzmo+github@m0g.net>

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist = py27, py34, docs
 commands =
     nosetests []
     pyflakes pyeagle
-    pep8 pyeagle
+    pep8 --ignore E701,E241,E231,E501,E127,E126 pyeagle
 deps =
     nose
     pyflakes
