Switch from pyflakes+pep8 to flake8

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,10 @@ envlist = py27, py34, docs
 [testenv]
 commands =
     nosetests []
-    pyflakes pyeagle
-    pep8 pyeagle
+    flake8
 deps =
     nose
-    pyflakes
-    pep8
+    flake8
     coverage
     nose-cover3
 
